<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.elacqua.gpacademic.ui.lesson.LessonFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_term"
        android:name="com.elacqua.gpacademic.ui.term.TermFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_term" />

    <fragment
        android:id="@+id/navigation_dream_gpa"
        android:name="com.elacqua.gpacademic.ui.dreamgpa.DreamGpaFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_dream_gpa" />
</navigation>