<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLayoutDreamGpa"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c7c7c7"
    tools:context=".ui.dreamgpa.DreamGpaFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/required_gpa"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:textColor="#ffffff"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/white_rect" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTotalCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:hint="@string/total_credit"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="60dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />
    </LinearLayout>

    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTermCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:hint="@string/term_credit"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="60dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />
    </LinearLayout>

    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:weightSum="1"
        android:layout_height="wrap_content">
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:background="#ffffff"
                android:id="@+id/txtCurrentGpa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_gpa"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="60dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />
    </LinearLayout>

    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:background="#ffffff"
                android:id="@+id/txtDreamGpa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dream_gpa"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="60dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/btnDreamGpaCalc"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignBottom="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bottom_bar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|top"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingEnd="0dp"
            android:text="GPA: 0.00"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>